# viewh5

./: .gitignore  AGENTS.md  LICENSE  README.md  main.py  prek.toml  pyproject.toml
.github/workflows/: pypi-release.yml
assets/: viewh5-demo.tape
src/viewh5/: app.py  cli.py  describe.py  model.py  types.py
src/viewh5/screens/: __init__.py  main.py
src/viewh5/widgets/: __init__.py  object_tree.py  preview_table.py  search_modal.py  summary_panel.py
tests/: conftest.py  test_app.py  test_cli.py  test_describe.py  test_model.py  test_snapshots.py
tests/.snapshot-fixtures/: sample.h5
tests/__snapshots__/test_snapshots/: test_snapshot_blocked_preview_warning.raw  test_snapshot_initial.raw  test_snapshot_safe_preview.raw
