[project]
name = "viewh5"
version = "0.3.0"
description = "Read-only Textual viewer for HDF5 files"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "h5py",
    "pillow>=12.2.0",
    "textual>=8.1.1",
    "typer>=0.24.1",
    "Pygments>=2.20.0",
]

[project.scripts]
viewh5 = "viewh5.cli:main"

[dependency-groups]
dev = [
    "ipython-icat>=0.4.1",
    "pytest-asyncio>=1.3.0",
    "pytest-textual-snapshot>=1.0.0",
    "ruff>=0.15.7",
    "ty>=0.0.25",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/viewh5"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
